[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/obs_websocket_gd/obs_ui.gd" type="Script" id=1]

[node name="ObsUi" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0

[node name="SourceItems" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_right = 1010.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="Render" type="CheckButton" parent="VBoxContainer/SourceItems"]
margin_right = 125.0
margin_bottom = 40.0
text = "Render"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/SourceItems"]
margin_left = 129.0
margin_right = 133.0
margin_bottom = 40.0

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_right = 1010.0
margin_bottom = 4.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 8.0
margin_right = 1010.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0

[node name="Scenes" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 243.0
margin_bottom = 578.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Scenes"]
margin_right = 243.0
margin_bottom = 14.0
text = "Scenes"
align = 1

[node name="ScenesScroll" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/Scenes"]
margin_top = 18.0
margin_right = 243.0
margin_bottom = 578.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Scenes/ScenesScroll"]
margin_right = 243.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 247.0
margin_right = 251.0
margin_bottom = 578.0

[node name="Sources" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 255.0
margin_right = 499.0
margin_bottom = 578.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Sources"]
margin_right = 244.0
margin_bottom = 14.0
text = "Sources"
align = 1

[node name="SourcesScroll" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/Sources"]
margin_top = 18.0
margin_right = 244.0
margin_bottom = 578.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/Sources/SourcesScroll"]
margin_right = 244.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 503.0
margin_right = 507.0
margin_bottom = 578.0

[node name="Controls" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 511.0
margin_right = 754.0
margin_bottom = 578.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Controls"]
margin_right = 243.0
margin_bottom = 14.0
text = "Controls"
align = 1

[node name="Stream" type="Button" parent="VBoxContainer/HBoxContainer/Controls"]
margin_top = 18.0
margin_right = 243.0
margin_bottom = 38.0
text = "Start Streaming"

[node name="Record" type="Button" parent="VBoxContainer/HBoxContainer/Controls"]
margin_top = 42.0
margin_right = 243.0
margin_bottom = 62.0
text = "Start Recording"

[node name="VSeparator3" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
margin_left = 758.0
margin_right = 762.0
margin_bottom = 578.0

[node name="Websocket" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 766.0
margin_right = 1010.0
margin_bottom = 578.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Websocket"]
margin_right = 244.0
margin_bottom = 14.0
text = "OBS Websocket"
align = 1

[node name="Host" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Websocket"]
margin_top = 18.0
margin_right = 244.0
margin_bottom = 42.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Websocket/Host"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Host:"

[node name="Value" type="LineEdit" parent="VBoxContainer/HBoxContainer/Websocket/Host"]
margin_left = 124.0
margin_right = 244.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "127.0.0.1"

[node name="Port" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Websocket"]
margin_top = 46.0
margin_right = 244.0
margin_bottom = 70.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Websocket/Port"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Port:"

[node name="Value" type="LineEdit" parent="VBoxContainer/HBoxContainer/Websocket/Port"]
margin_left = 124.0
margin_right = 244.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "4444"

[node name="Password" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Websocket"]
margin_top = 74.0
margin_right = 244.0
margin_bottom = 98.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Websocket/Password"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Password:"

[node name="Value" type="LineEdit" parent="VBoxContainer/HBoxContainer/Websocket/Password"]
margin_left = 124.0
margin_right = 244.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "password"
secret = true

[node name="Connect" type="Button" parent="VBoxContainer/HBoxContainer/Websocket"]
margin_top = 102.0
margin_right = 244.0
margin_bottom = 122.0
text = "Connect"

[node name="RefreshData" type="Button" parent="VBoxContainer/HBoxContainer/Websocket"]
margin_top = 126.0
margin_right = 244.0
margin_bottom = 146.0
text = "Refresh Data"
